--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,5 +13,6 @@
   ],
   "idf.portWin": "COM4",
   "idf.pythonBinPathWin": "C:\\Users\\MTC-TTM\\.espressif\\python_env\\idf5.2_py3.11_env\\Scripts\\python.exe",
-  "idf.toolsPathWin": "C:\\Users\\MTC-TTM\\.espressif"
+  "idf.toolsPathWin": "C:\\Users\\MTC-TTM\\.espressif",
+  "idf.flashType": "UART"
 }
