--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,6 +17,7 @@
   "idf.flashType": "UART",
   "files.associations": {
     "*.inc": "c",
-    "dht11.h": "c"
+    "dht11.h": "c",
+    "esp_rom_gpio.h": "c"
   }
 }
