Init the files bsp timer

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,2 +1,2 @@
-idf_component_register(SRCS "esp32-dht11.c" "main.c"
+idf_component_register(SRCS "bsp_timer.c" "esp32-dht11.c" "main.c"
                     INCLUDE_DIRS ".")
