--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,5 +1,5 @@
 idf_component_register(SRCS "bsp/bsp_gpio.c" "bsp/bsp_timer.c" 
                             
-                            "esp32-dht11.c" "main.c"
+                            "drv_dht11.c" "main.c"
 
                     INCLUDE_DIRS "." "bsp")
