Still developing function drv_dht11_check_state_time

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,6 +21,9 @@
     "esp_rom_gpio.h": "c",
     "esp32-dht11.h": "c",
     "freertos.h": "c",
-    "task.h": "c"
+    "task.h": "c",
+    "bitset": "c",
+    "algorithm": "c",
+    "format": "c"
   }
 }
