Apply function bsp_delay into main code

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -25,6 +25,7 @@
     "bitset": "c",
     "algorithm": "c",
     "format": "c",
-    "drv_dht11.h": "c"
+    "drv_dht11.h": "c",
+    "string.h": "c"
   }
 }
