Add files driver into folder driver

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,5 +1,7 @@
 idf_component_register(SRCS "bsp/bsp_gpio.c" "bsp/bsp_timer.c" 
                             
-                            "drv_dht11.c" "main.c"
+                            "driver/drv_dht11.c" 
+                            
+                            "main.c"
 
-                    INCLUDE_DIRS "." "bsp")
+                    INCLUDE_DIRS "." "bsp" "driver")
